--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -70,7 +70,7 @@ safety mechanisms to be installed. One in particular, namely the \textbf{interlo
 is of interest to us. The interlocking physically locked levers if they were
 unsafe to move.
 \end{comment}
-The advent of electricity brough about a further advance in railway technology, allowing for the development of the \textbf{track circuit}. When a train was on a segment of track it completed the circuit between the two rails and light up an indicator in the signal box. As more track circuits were deployed it became possible to control certain signals without human intervention. These \textbf{automatic signals} were completely operated by track circuits and prevented trains from entering a segment of track behind a signal already containing a train. Electric motors enabled the construction of electric point machines enabling the signaller to electronically control a point at a great distance with little physical effort. The area control by each signal box was greatly increased along with the number of signals controlable by one signaller. Electromechanical \textbf{relays} were introduced as a replacement for the soley mechanical relays reducing the size of each signal box and its footprint on the landscape.
+The advent of electricity brought about a further advance in railway technology, allowing for the development of the \textbf{track circuit}. When a train was on a segment of track it completed the circuit between the two rails and light up an indicator in the signal box. As more track circuits were deployed it became possible to control certain signals without human intervention. These \textbf{automatic signals} were completely operated by track circuits and prevented trains from entering a segment of track behind a signal already containing a train. Electric motors enabled the construction of electric point machines enabling the signaller to electronically control a point at a great distance with little physical effort. The area control by each signal box was greatly increased along with the number of signals controllable by one signaller. Electromechanical \textbf{relays} were introduced as a replacement for the solely mechanical relays reducing the size of each signal box and its footprint on the landscape.
 \begin{comment}
 The next leap in railway technology came from the invention of the electronic
 \textbf{track circuit}. These would activate an indicator in the signal box if a
@@ -205,7 +205,7 @@ topology of the railway a more detailed description can be found in \cite{KR01}
 
 \subsubsection{Track Segments}
 
-In fig \ref{fig:track}  there are 4 track segments $A,B,C,D$ which is typical of a junction containing a single point. Each track segment contains a track circuit for the purpose of detecting whether it is occupied by a train or not. When a train is present on a segment of track the metal wheels and axel complete the circuit and allow the control system to detect its presense. It is possible for a train to be longer than a track segment and this is particularly the case at junctions other areas where a large amount of control is needed over trains. A shorter track segment allows for a finer grain view of the railway by the interlocking and control system and can allow for a greater through put of trains. Conversely the length of track segments can be far longer on long straight segments of track without any interesting features such as junctions or stations.
+In fig \ref{fig:track}  there are 4 track segments $A,B,C,D$ which is typical of a junction containing a single point. Each track segment contains a track circuit for the purpose of detecting whether it is occupied by a train or not. When a train is present on a segment of track the metal wheels and axle complete the circuit and allow the control system to detect its presence. It is possible for a train to be longer than a track segment and this is particularly the case at junctions other areas where a large amount of control is needed over trains. A shorter track segment allows for a finer grain view of the railway by the interlocking and control system and can allow for a greater through put of trains. Conversely the length of track segments can be far longer on long straight segments of track without any interesting features such as junctions or stations.
 
 \begin{comment}
 A section of track is typically broken down into track segments each
@@ -218,7 +218,7 @@ where control over train movement is of greater importance.
 
 
 \subsubsection{Points}
-Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track is needed and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is refered to as \textbf{reverse}  or is inactive which is refered to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a railway hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in fig \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
+Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track is needed and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is refered to as \textbf{reverse}  or is inactive which is referred to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a railway hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in fig \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
 
 \begin{comment}
 A point is a physical piece of equipment that is used to 
@@ -283,7 +283,7 @@ aspects used for a three light signal.
 \item[Green] -  The driver is clear to proceed down the track at full speed to the next signal as long as it is safe to do so. The track ahead is clear for a sufficient distance.
 \end{description}
 
-Other types of signal are normally used in more specific circumstances to control trains on certain types of track.  There are normally single aspect fixed red signals at the ends of tracks that provide permanent indicators not to proceed to approaching drivers. On a low speed segments of track a two aspect signal may be used if the stopping distance of approaching trains is short. Whereas on heigh speed segments of track, where the stopped distances are long, 4 aspect signals may be used with two amber signals in order to provide information about the following two signals. This forms part of the standard signalling scheme in the UK however there are no international standards or consensous. Every country has its own particular singalling scheme with their own conventions on the colour and number of signals used. 
+Other types of signal are normally used in more specific circumstances to control trains on certain types of track.  There are normally single aspect fixed red signals at the ends of tracks that provide permanent indicators not to proceed to approaching drivers. On a low speed segments of track a two aspect signal may be used if the stopping distance of approaching trains is short. Whereas on heigh speed segments of track, where the stopped distances are long, 4 aspect signals may be used with two amber signals in order to provide information about the following two signals. This forms part of the standard signalling scheme in the UK however there are no international standards or consensus. Every country has its own particular singalling scheme with their own conventions on the colour and number of signals used. 
 
 \begin{comment}
 The one aspect signal is typically a fixed red indicating that is not possible
@@ -302,7 +302,7 @@ colours and number of lights on each signal.
 
 \subsection{The Westrace Interlocking}
 
-Railway interlockings are critical components of the railway with the sole purpose of enforcing a safe stating by acting as a safety kernal between the control system and the physical railway. It repeatedly receives commands and instructions from the control system and then applys a set of rules to check the the state of the railway following the application of the control signnals is safe. If the control signals pass this safety check then they are committed to the physical railway in the next cycle. For example if some human inputted schedule requests a route the interlocking will check that the route setting of the route does not conflict with any other routes currently set or any other signalling principles. If these tests are passed then the route  is set in the physical railway in the next cycle.
+Railway interlockings are critical components of the railway with the sole purpose of enforcing a safe stating by acting as a safety kernel between the control system and the physical railway. It repeatedly receives commands and instructions from the control system and then applies a set of rules to check the the state of the railway following the application of the control signals is safe. If the control signals pass this safety check then they are committed to the physical railway in the next cycle. For example if some human inputted schedule requests a route the interlocking will check that the route setting of the route does not conflict with any other routes currently set or any other signalling principles. If these tests are passed then the route  is set in the physical railway in the next cycle.
 
 \begin{comment}
 The railway interlocking is a key component in ensuring the safety of the
