--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -1,5 +1,5 @@
 \thesischapter{Background: Traditional Railway Control Systems}{Traditional Railway Control Systems}
-The birth of the railways occurred in the 1800s and from that point until the present day they have experienced continual growth, change and development. In the beginning the burden of safety was placed solely on human shoulders and has since been placed on mechanical systems before finally being transferred to electronics systems that are in place guaranteeing safety today. In the following we shall present a brief history of the railway followed by information on our industrial partner Invensys Rail.  Following this general introduction we shall look into specific equipment found on the modern railway and other information needed to understand the domain. Most importantly we shall describe the Westrace interlocking, a modern system charge with guaranteeing safety on the railway, which is produced by Invensys. In the final part of this chapter we shall look at some previous work in this field.
+The birth of the railways occurred in the 1800s and from that point until the present day they have experienced continual growth, change and development. In the beginning the burden of safety was placed solely on human shoulders and has since been placed on mechanical systems before finally being transferred to electronics systems that are in place guaranteeing safety today. In the following we shall present a brief history of the railway followed by information on our industrial partner Invensys Rail.  Following this general introduction we shall look into specific equipment found on the modern railway and other information needed to understand the domain. Most importantly we shall describe the Westrace interlocking, a modern system charged with guaranteeing safety on the railway, which is produced by Invensys. In the final part of this chapter we shall look at some previous work in this field.
 
 
 \begin{comment}
@@ -16,7 +16,7 @@ in this field.
 \end{comment}
 
 \section{ A History of Railway Signalling and Control Systems}
-Initially in the early days of the railway there was not fixed signals as we see today. Instead Policemen stationed at junctions and railway stations, were charged with signalling train drivers using a system of flags or oil lamps and changing the points of the railway. A major problem of the time, without telecommunications, was that there was no way of locating a train once it went out of sight. This meant that in practice the only safety precaution that could be taken was to delay the departure of trains using an egg timer which would hopefully space out their positions along the track. The level of safety resulting from this precaution was acceptable as train speeds were not relatively high at the time.
+Initially in the early days of the railway there was not fixed signals as we see today. Instead Policemen, stationed at junctions and railway stations, were charged with signalling train drivers using a system of flags or oil lamps and changing the points of the railway. A major problem of the time, without telecommunications, was that there was no way of locating a train once it went out of sight. This meant that in practice the only safety precaution that could be taken was to delay the departure of trains using an egg timer which would hopefully space out their positions along the track. The level of safety resulting from this precaution was acceptable as train speeds were not relatively high at the time compared with modern railways.
 
 
 \begin{comment}
@@ -32,7 +32,7 @@ not very high during this period so this was an acceptable way of ensuring safet
 \end{comment}
 
 
-The most important type of signal found in the modern railway is the \textbf{fixed signal} which are static, positioned by the side of the track and visually present information to the train driver. The first fixed signals were wooden boards shaped in such a way to provide specific information attached to poles which rotate around a vertical axis. Typically these boards would form a signal instructing the train driver to stop, however if the board was rotated side-on to the driver then it becomes inactive and the driver would proceed if it is safe to do so.
+The most important type of signal found in the modern railway is the \textbf{fixed signal} which is static, positioned by the side of the track and visually present information to the train driver. The first fixed signals were wooden boards shaped in such a way to provide specific information attached to poles which rotate around a vertical axis. Typically these boards would form a signal instructing the train driver to stop, however if the board was rotated side-on to the driver then it becomes inactive and the driver would proceed if it is safe to do so.
 
 \begin{comment}
 Modern railway signally makes use of \textbf{fixed signals}. These are permanently positioned
